--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+:root {
+    --video-offset: 40px;
+}
+
 body {
     background-color: rgba(28, 28, 30, 255);
     text-align: center;
@@ -24,6 +28,7 @@ canvas {
     display: block;
     background: black;
     height: 90vh;
+    margin-top: var(--video-offset);
 }
 
 #scrubber {
@@ -43,10 +48,7 @@ canvas {
 
 #overlay {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    top: var(--video-offset);
     background: rgba(0, 0, 0, 0.7);
     color: white;
     display: flex;
