--- a/style.css
+++ b/style.css
@@ -55,7 +55,6 @@ canvas {
     justify-content: center;
     align-items: center;
     font-size: 24px;
-    visibility: hidden;
 }
 
 .button-container {
@@ -121,6 +120,10 @@ button[data-selected='true'] {
     width: 0;
     height: 0;
     position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 
 #MainMenu {
